<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_maps_DrawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <fragment
            android:id="@+id/activity_maps_GoogleMapsFragment"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.v7.widget.CardView
            android:id="@+id/activity_maps_search_CardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_padding"
            app:cardCornerRadius="4dp"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <ImageView
                    android:id="@+id/activity_maps_top_card_menu_ImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="?selectableItemBackground"
                    android:paddingLeft="@dimen/default_padding"
                    android:src="@drawable/ic_menu"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/activity_maps_search_AutoCompleteTextView"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/default_padding_half"
                    android:layout_marginRight="@dimen/default_padding_half"
                    android:background="@null"
                    android:hint="@string/maps_activity_search_address"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/activity_maps_top_card_menu_ImageView"
                    app:layout_constraintRight_toLeftOf="@+id/activity_maps_top_card_my_position_ImageView"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/activity_maps_top_card_my_position_ImageView"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:background="?selectableItemBackground"
                    android:paddingBottom="12dp"
                    android:paddingTop="12dp"
                    android:src="@drawable/ic_my_location"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/activity_maps_top_card_refresh_ImageView"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/activity_maps_top_card_refresh_ImageView"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:background="?selectableItemBackground"
                    android:paddingBottom="12dp"
                    android:paddingTop="12dp"
                    android:src="@drawable/ic_refresh_black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

        <LinearLayout
            android:id="@+id/activity_maps_loader_Layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ProgressBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_padding"
                android:gravity="center_horizontal"
                android:text="@string/maps_activity_data_download_in_progress"
                android:textColor="@color/blackText"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/activity_maps_connection_error_cache_available_Layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_padding"
                android:gravity="center_horizontal"
                android:text="@string/maps_activity_connection_error"
                android:textColor="@color/blackText"
                android:textSize="16sp" />

            <Button
                android:id="@+id/activity_maps_load_cached_data_Button"
                android:layout_width="wrap_content"
                android:layout_height="72dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/default_padding"
                android:drawableLeft="@drawable/ic_cache_white"
                android:drawablePadding="@dimen/default_padding"
                android:lineSpacingExtra="8dp"
                android:minWidth="200dp"
                android:text="@string/maps_activity_load_cached_data"
                android:theme="@style/GreenButton" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/activity_maps_connection_error_no_cache_available_Layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_padding"
                android:gravity="center_horizontal"
                android:text="@string/maps_activity_connection_error_no_cache_available"
                android:textColor="@color/blackText"
                android:textSize="16sp" />

        </LinearLayout>

        <fr.correntin.android.toilets_paris.views.ToiletDetailsView
            android:id="@+id/activity_maps_ToiletDetailsView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:clickable="false"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/activity_maps_NavigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/view_drawer_layout_header" />
</android.support.v4.widget.DrawerLayout>